Modification du process par rapport au produit
